@@ -312,3 +312,8 @@ allow reassign channel position via channel_id reference
 
 2017-04-14
 Supplement/sort 3 changes
+
+2017-04-17
+fix channel position reassign via supplement.txt
+fix scan mode FTA Only
+
